--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <i class="pe-7s-light"></i> Submit Ideas
+                            <i class="pe-7s-tools"></i> Installation
                         </a>
                     </li>
                     <li>
